refactor: streamline aggregation and group by handling in AggregationRequestResolver and AggregationSpec